--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "next": "^14.0.3",
     "react": "^18",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18",
