--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "next": "^14.0.3",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
