--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.2",
+    "@editorjs/list": "^2.0.6",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/table": "^2.4.4",
+    "@types/editorjs__header": "^2.6.3",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "next": "^14.0.3",
-    "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-editor-js": "^2.1.0",
     "react-hot-toast": "^2.5.2",
     "react-quill": "^2.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
