--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,5 +1,5 @@
-# .github/workflows/deploy-frontend.yml
-name: "Deploy Frontend"
+# .github/workflows/deploy-frontend-ssr.yml
+name: "Deploy Frontend (SSR)"
 
 on:
   push:
@@ -9,7 +9,11 @@ on:
 jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+      NEXT_PUBLIC_UPLOAD_BASE: ${{ secrets.NEXT_PUBLIC_UPLOAD_BASE }}
     steps:
+
       # 1) استنساخ الكود
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,10 +29,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build project
-        run: npm run build   # بالنسبة لـ create-react-app يولّد build/, ولـ Next.js قد تحتاج npm run build && npm run export
+        run: npm run build
 
-      # 4) نسخ ملفات البُناء إلى السيرفر
-      - name: Copy built files to server
+      # 4) نسخ مجلدات .next و node_modules + ملفات التكوين إلى السيرفر
+      - name: Copy SSR files to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.DEPLOY_HOST }}
@@ -37,8 +41,8 @@ jobs:
           source: ".next/,node_modules/,package.json,next.config.js,public/"
           target: "/var/www/frontend"
 
-      # 5) إعادة تحميل Nginx ليتعرّف على النسخة الجديدة
-      - name: Reload nginx on server
+      # 5) تشغيل أو إعادة تشغيل التطبيق عبر PM2
+      - name: Start or reload frontend via PM2
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.DEPLOY_HOST }}
