--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy-frontend-ssr.yml
 name: "Deploy Frontend (SSR)"
 
 on:
@@ -13,35 +12,27 @@ jobs:
       NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
       NEXT_PUBLIC_UPLOAD_BASE: ${{ secrets.NEXT_PUBLIC_UPLOAD_BASE }}
     steps:
-
-      # 1) استنساخ الكود
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2) تهيئة Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
 
-      # 3) تثبيت الحزم وبناء المشروع
-      - name: Install dependencies
-        run: npm ci
       - name: Build project
         run: npm run build
 
-      # 4) نسخ مجلدات .next و node_modules + ملفات التكوين إلى السيرفر
       - name: Copy SSR files to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
-          source: ".next/,node_modules/,package.json,next.config.js,public/"
+          source: ".next/,package.json,next.config.js,public/"
           target: "/var/www/frontend"
 
-      # 5) تشغيل أو إعادة تشغيل التطبيق عبر PM2
       - name: Start or reload frontend via PM2
         uses: appleboy/ssh-action@v0.1.7
         with:
