--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -38,8 +38,8 @@ jobs:
             postcss.config.js
             tailwind.config.js
             tsconfig.json
-            src/
-            public/
+            src
+            public
           target: /var/www/frontend
 
       # 4) بناء وتشغيل المشروع على السيرفر
